<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/backgroundtop" >


        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="55dp" >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="156dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="0dp"
                android:src="@drawable/profil" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="160dp"
                android:layout_gravity="center_horizontal"
                android:text="Afri Dwi Yulianto"
                android:textColor="#ffff"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_asal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="200dp"
                android:drawableLeft="@drawable/ic_person_pin_circle_black_24dp"
                android:text="@string/asal"
                android:textColor="#ffa" />
        </FrameLayout>

    </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="800dp"
            android:background="@drawable/bg1">

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="156dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="156dp"
                android:background="#FFFF"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_pengikut"
                    android:layout_width="100sp"
                    android:layout_height="40sp"
                    android:gravity="center"
                    android:text="@string/pengikut"
                    android:textColor="#000000"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="100sp"
                    android:layout_height="30sp"
                    android:gravity="center"
                    android:text="60.000"
                    android:textColor="#009688"
                    android:textSize="19dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="0dp"
                android:background="#FFFF"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_post"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/post"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="100sp"
                    android:layout_height="30sp"
                    android:gravity="center"
                    android:text="150"
                    android:textColor="#009688"
                    android:textSize="19sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="-160dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="55dp"
                android:layout_toEndOf="@+id/linearLayout3"
                android:background="#FFFF"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_mengikuti"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/mengikuti"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="100sp"
                    android:layout_height="30sp"
                    android:gravity="center"
                    android:text="734"
                    android:textColor="#009688"
                    android:textSize="19sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:paddingLeft="60dp"
                    android:src="@drawable/ic_email_black_24dp" />
                <TextView
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="ady.xmm173@gmail.com"
                    android:textColor="#FFF"
                    android:textSize="15dp"
                    android:textStyle="italic"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="110dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:paddingLeft="60dp"
                    android:src="@drawable/ic_camera_alt_black_24dp" />
                <TextView
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="FLiProduction"
                    android:textColor="#FFF"
                    android:textSize="15dp"
                    android:textStyle="italic"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="140dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:paddingLeft="60dp"
                    android:src="@drawable/ic_person_pin_black_24dp" />
                <TextView
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="afriyulianto_"
                    android:textColor="#FFF"
                    android:textSize="15dp"
                    android:textStyle="italic"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="200dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Deskripsi"
                    android:textColor="#FFFFAA"
                    android:textSize="20dp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="240dp"
                android:orientation="horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deskripsi"
                    android:textColor="#FFFFFF"
                    android:textSize="18dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="760dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Copyright 2019"
                    android:textColor="#FFF"
                    android:textSize="10dp"
                    android:textStyle="italic" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
